fix timeframe out of bounds error in TimeframeCreator

--- a/front-end/src/containers/Navbar/Navbar.module.css
+++ b/front-end/src/containers/Navbar/Navbar.module.css
@@ -51,7 +51,7 @@
     
 }
 
-.LogoTextutModal {
+.LogoutModal {
     padding: 10px 40px 15px;
 }
 
